Added customer search endpoint